@@ -37,12 +37,15 @@ version = '0.5.0-alpha6'
 sourceCompatibility = '13'
 
 sourceSets {
-    main.java.srcDirs 'src/main'
-    test.java.srcDirs 'src/test'
+    main.java.srcDirs 'src/main/java'
+    test.java.srcDirs 'src/main/test'
 }
 
 test {
     useJUnitPlatform()
+}
+run {
+    jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED']
 }
 
 dependencies {
@@ -90,6 +93,10 @@ dependencies {
     implementation 'org.usb4java:usb4java:1.3.0'
     implementation 'org.usb4java:usb4java-javax:1.3.0'
     implementation 'pl.edu.icm:JLargeArrays:1.6'
+    
+    // SDRplay support
+    implementation 'io.github.Sammy1Am:SDRplayJava:0.8.0'
+    implementation 'com.github.jnr:jnr-ffi:2.2.0'
 
     //These must remain as compile options to ensure they are included in the build to produce multi-OS images
     compile "org.openjfx:javafx-base:15:win"
